중요 변경사항 (폭, 우측넓이, 닫기, 사이즈맵, 상단라벨 제외)
1. 페이지 전체 넓이 1246px로 조정 (HOME / Section / List 공통)
.container { max-width: 1246px; margin: 0 auto; padding: 0 10px; }

2. .sidebar 폭 300 → 336px (우측 MR 영역),
@media (min-width: 1025px) {
    .sidebar {
        flex: 0 0 336px;
        min-width: 336px;
        /* max-width: 336px;  ← 꼭 필요하진 않지만 추가해도 무방 */
    }
}

3. HOME/Section/List/View 우측 사이드레일, 사이즈 매핑 'sizeMapping_siderail_square' 통일
sizeMapping_right_square → sizeMapping_siderail_square 교체, 그리고 더 이상 쓰이지 않는 sizeMapping_right_square 선언은 삭제.
const sizeMapping_siderail_square = googletag.sizeMapping()
  .addSize([1024, 0], [
      [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .addSize([768, 0], [
      [480, 320], [336, 280],
      [320, 100], [320, 50],
      [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .addSize([0, 0], [
      [336, 280], [320, 480],
      [320, 100], [320, 50],
      [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .build();

4. 상단 영역에서  "Advertisement" 라벨 제외
- HOME/Section/List 에서 상단 'TC_billboard_leaderboard' 슬롯에 "Advertisement" 라벨 제외
-  View의 TC_billboard_X  슬롯에서  "Advertisement" 라벨 제외

5. '체크박스 + 오늘하루 닫기 X 버튼' 은 데스크탑 전용으로만 변경

--- a/list.html
+++ b/list.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -64,13 +64,24 @@
         //   2) 해당 요소가 속한 .ad-slot 래퍼를 찾고
         //   3) .mk-ad-label 이 이미 없을 때만 새 DIV를 prepend
         // - View/HOME/SECTION/LIST GPT 모두 동일한 스타일/로직으로 통일했습니다.
+        //
+        // [List/HOME 공통 정책]
+        // - 상단 TC_billboard_leaderboard는 브랜드/메인 크리에이티브 영역으로
+        //   활용될 수 있으므로 "Advertisement" 라벨을 붙이지 않는 예외 슬롯으로 처리합니다.
         // ***************************************************
         function addAdLabel(event) {
             const slotId = event.slot.getSlotElementId();
             const slotElement = document.getElementById(slotId); 
+
+            // 💡 [TC 전용 예외 처리] 리스트 상단 TC에는 라벨을 붙이지 않음 (HOME/SECTION과 동일 정책)
+            if (slotId === 'TC_billboard_leaderboard') {
+                if (event.isEmpty) return;   // 광고가 없으면 아무 동작 없음
+                console.log('ℹ️ [Ad Label] TC_billboard_leaderboard: label skipped by policy.');
+                return;
+            }
             
             if (event.isEmpty === false && slotElement) {
-                const outerSlot = slotElement.closest('.ad-slot'); 
+                const outerSlot = slotElement.closest('.ad-slot') || slotElement; 
                 if (!outerSlot) return;
 
                 // 동일 슬롯에 라벨 중복 삽입 방지
