1. 모든 페이지 전체 넓이 1246px로 조정 (View / HOME / Section / List 공통) .container { max-width: 1246px; margin: 0 auto; padding: 0 10px; }
2. HOME/Section/List의 .sidebar 폭 300 → 336px (우측 MR 영역),
@media (min-width: 1025px) {
    .sidebar {
        flex: 0 0 336px;
        min-width: 336px;
        /* max-width: 336px;  ← 꼭 필요하진 않지만 추가해도 무방 */
    }
}

3. HOME/Section/List/View 우측 사이드레일, 사이즈 매핑 'sizeMapping_siderail_square' 통일
sizeMapping_right_square → sizeMapping_siderail_square 교체, 그리고 더 이상 쓰이지 않는 sizeMapping_right_square 선언은 삭제.
const sizeMapping_siderail_square = googletag.sizeMapping()
  .addSize([1024, 0], [
      [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .addSize([768, 0], [
      [480, 320], [336, 280],
      [320, 100], [320, 50],
      [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .addSize([0, 0], [
      [336, 280], [320, 480],
      [320, 100], [320, 50],
      [300, 250], [250, 250], [200, 200],
      [2, 1], [1, 1], 'fluid'
  ])
  .build();

4. 상단 영역에서  "Advertisement" 라벨 제외
- HOME/Section/List 에서 상단 'TC_billboard_leaderboard' 슬롯에 "Advertisement" 라벨 제외
-  View 페이지의 TC_billboard_X  슬롯에서  "Advertisement" 라벨 제외

5. HOME만 해당(나머지는 해당사항 없음)  '체크박스 + 오늘하루 닫기 X 버튼' 은 데스크탑 전용으로만 변경
 ✅ '오늘 하루 닫기' / 디바이스 정책 관련 전역 헬퍼들
        // ---------------------------------------------------
        // - HOME GPT 상단 TC_billboard_leaderboard 전용 로직
        // - 정책:
        //   · 초기면(HOME)의 상단 TC에만 "오늘 하루 닫기" 기능을 제공
        //   · 현재는 데스크탑 전용으로 운용
        //     (모바일/태블릿에서는 레이아웃 안정성 및 수익성 관점에서 닫기 기능 비활성화)
        //   · 상위 플래그(window.__MK_TC_CLOSE_ENABLED__ !== false)를 통해
        //     로드블로킹 캠페인 등에서 "닫기 기능 전체 OFF"가 가능하도록 설계

--- a/HOME.html
+++ b/HOME.html
@@ -1171,7 +1171,7 @@
             startObservingLazySlots(); // Lazy 대상 슬롯 관찰 시작
         });
 
-        // ※ addAdLabel 및 TC 전용 닫기 기능, 디바이스 정책 로직은 <head> 영역에서 전역 1회만 등록
-    </script>
+        // ※ addAdLabel 및 TC 전용 닫기 기능, 디바이스 정책 로직은 <head> 영역에서 전역 1회만 등록함
+    </script> 
 </body>
 </html>
