.mk-ad-close-button 배경 연하게

--- a/HOME.html
+++ b/HOME.html
@@ -230,7 +230,7 @@
             right: 10px;
             padding: 4px 4px;              /* 클릭 영역은 확보하되 과도한 박스 느낌은 줄임 */
             border-radius: 0;              /* 각진 형태로 심플하게 유지 */
-            background-color: rgba(0, 0, 0, 0.35);
+            background-color: rgba(100, 100, 10, 0.35);
             display: inline-flex;
             align-items: center;
             gap: 4px;
@@ -238,7 +238,7 @@
             z-index: 200;
             white-space: nowrap;
             box-shadow: 
-                0 1px 3px rgba(0, 0, 0, 0.6);  /* 부드러운 그림자: 배경과 자연스럽게 분리 */
+                0 0 4px rgba(100, 100, 100, 0.35);  /* 부드러운 그림자: 배경과 자연스럽게 분리 */
         }
 
         .mk-ad-close-button input[type="checkbox"] {
