box-shadow: none;

--- a/HOME.html
+++ b/HOME.html
@@ -237,8 +237,7 @@
             cursor: pointer;
             z-index: 200;
             white-space: nowrap;
-            box-shadow: 
-                0 0 10px rgba(0, 0, 0, 0.2);  /* 부드러운 그림자: 배경과 자연스럽게 분리 */
+            box-shadow: none;                 
         }
 
         .mk-ad-close-button input[type="checkbox"] {
