추가 : .mk-ad-close-button 에서 border: none;

--- a/HOME.html
+++ b/HOME.html
@@ -237,7 +237,9 @@
             cursor: pointer;
             z-index: 200;
             white-space: nowrap;
-            box-shadow: none;                 
+            box-shadow: none;
+            /* 🔹 테두리 완전 제거 */
+            border: none;                 
         }
 
         .mk-ad-close-button input[type="checkbox"] {
