--- a/HOME.html
+++ b/HOME.html
@@ -728,7 +728,7 @@
 
             // 0-1. 가로형 배너용 사이즈 매핑 (TC, MC)
             const sizeMapping_horizontal = googletag.sizeMapping()
-                .addSize([1024, 0], [[1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
+                .addSize([1024, 0], [[1246, 100], [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
                 .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
                 .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [320, 50], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
                 .build();
@@ -776,7 +776,7 @@
             // TC_billboard_leaderboard (Eager Load) - sizeMapping_horizontal 적용
             TC_billboard_leaderboard_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [320, 100], [320, 50], [1, 1], 'fluid'],
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [320, 100], [320, 50], [1, 1], 'fluid'],
                 'TC_billboard_leaderboard'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
@@ -790,7 +790,7 @@
             // MC_billboard_rectangle (Lazy Load) - sizeMapping_horizontal 적용
             MC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
