--- a/HOME.html
+++ b/HOME.html
@@ -728,31 +728,54 @@
 
             // 0-1. 가로형 배너용 사이즈 매핑 (TC, MC)
             const sizeMapping_horizontal = googletag.sizeMapping()
-                .addSize([1024, 0], [[1246, 100], [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'])
-                .addSize([768, 0], [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [300, 250], [2, 1], [1, 1], 'fluid'])
-                .addSize([0, 0], [[336, 280], [300, 250], [320, 480], [320, 100], [320, 50], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'])
+                .addSize([1024, 0], [
+                    [1246, 100], [1200, 300], [1200, 100], 
+                    [980, 120], [970, 250], [930, 180], [970, 90], 
+                    [728, 90], 
+                    [2, 1], [1, 1], 
+                    'fluid'
+                ])
+                .addSize([768, 0], [
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], 
+                    [336, 280], [300, 250], 
+                    [2, 1], [1, 1], 
+                    'fluid'
+                ])
+                .addSize([0, 0], [
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 
+                    'fluid'
+                ])
                 .build();
 
             // 0-2. 우측 사이드레일 박스형 배너용 사이즈 매핑 (MR)
-            // - 기존 sizeMapping_right_square를 sizeMapping_siderail_square로 교체
             //   · 데스크탑 구간([1024,0])에도 336x280을 최우선 사이즈로 추가
             //   · 태블릿/모바일 구간은 기존 정책을 유지하면서 네이밍만 통일
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [336, 280], [300, 600], [300, 250], 
+                    [250, 250], [200, 200],
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([768, 0], [
-                    [480, 320], [336, 280],
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], 
+                    [336, 280],[320, 480],
                     [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([0, 0], [
                     [336, 280], [320, 480],
                     [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .build();
             // ----------------------------------------------------]
@@ -776,7 +799,7 @@
             // TC_billboard_leaderboard (Eager Load) - sizeMapping_horizontal 적용
             TC_billboard_leaderboard_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [320, 100], [320, 50], [1, 1], 'fluid'],
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'],
                 'TC_billboard_leaderboard'
             )
                 .defineSizeMapping(sizeMapping_horizontal) 
