--- a/view.html
+++ b/view.html
@@ -216,65 +216,84 @@
             googletag.pubads().addEventListener('slotRenderEnded', addAdLabel);
 
             // ------------------------------------------------------------------
-            // 0. Size Mapping 정의 – 반응형 광고 사이즈 정책
+            // 0. Size Mapping 정의 – 반응형 광고 사이즈 정책(3개로 분리 적용)
             //
             // - 이 View GPT에서는 3가지 대표 매핑을 사용합니다.
-            //   · sizeMapping_horizontal        : 상단 TC / BC 빌보드 등 가로형
+            //   · sizeMapping_horizontal        : 상단 TC , 하단 BC
             //   · sizeMapping_siderail_square   : 우측 MR 사이드 레일 사각형/스카이
-            //   · sizeMapping_article_horizontal: 본문 in-article / 중형 직사각형
+            //   · sizeMapping_article_horizontal: 본문 MC, in-article / 중형 직사각형
             //
             // - addSize([뷰포트 최소 크기], [허용 광고 사이즈 배열]) 방식으로
             //   여러 구간을 정의한 뒤 build()로 최종 객체를 생성합니다.
             // ------------------------------------------------------------------
+            
+            // 0-1. 가로형 배너용 사이즈 매핑 (TC)
             const sizeMapping_horizontal = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [1246, 100], [1200, 300], [1200, 100], [970, 250], [980, 120], [970, 90], [930, 180],
-                    [750, 300], [750, 200], [728, 90],
-                    [2, 1], [1, 1], 'fluid'
+                    [1246, 100], [1200, 300], [1200, 100], 
+                    [980, 120], [970, 250], [930, 180], [970, 90], 
+                    [728, 90], 
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([768, 0], [
-                    [750, 300], [750, 200], [728, 90],
-                    [480, 320], [336, 280], [300, 250],
-                    [2, 1], [1, 1], 'fluid'
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], 
+                    [336, 280], [300, 250], 
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([0, 0], [
-                    [336, 280], [300, 250], [320, 480],
-                    [320, 100], [320, 50],
-                    [2, 1], [1, 1], 'fluid'
+                    [336, 280], [320, 480],
+                    [320, 100], [320, 50], 
+                    [300, 250], [250, 250], [200, 200], 
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .build();
 
+            // 0-2. 우측 사이드레일 박스형 배너용 사이즈 매핑 (MR)
+            //   · 데스크탑 구간([1024,0])에도 336x280을 최우선 사이즈로 추가
+            //   · 태블릿/모바일 구간은 기존 정책을 유지하면서 네이밍만 통일
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [336, 280], [300, 600], [300, 250], 
+                    [250, 250], [200, 200],
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([768, 0], [
-                    [480, 320], [336, 280],
+                    [750, 300], [750, 200], [728, 90], 
+                    [480, 320], 
+                    [336, 280],[320, 480],
                     [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .addSize([0, 0], [
                     [336, 280], [320, 480],
                     [320, 100], [320, 50],
                     [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
+                    [2, 1], [1, 1], 
+                    'fluid'
                 ])
                 .build();
 
+                // 0-3. 본문 박스형 배너용 사이즈 매핑 (MC)
+            //   · 데스크탑/태블릿 구간([1024,0]), ([768,0])에는 중형 직사각형, 모바일([0,0]),박스형 직사각형 최우선 사이즈로 추가            
             const sizeMapping_article_horizontal = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [480, 320], [336, 280],
+                    [480, 320], [336, 280],[320,480], 
                     [320, 100], [320, 50],
                     [300, 250],
                     // 300x25x 시리즈: 라인아이템/캠페인 분리를 위한 미세 구분용 사이즈
                     [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258],
-                    [250, 250],
+                    [250, 250],[200, 200],
                     [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
-                    [480, 320], [336, 280],
+                    [480, 320], [336, 280], [320,480], 
                     [320, 100], [320, 50],
                     [300, 250],
                     [300, 251], [300, 252], [300, 253], [300, 254], [300, 255], [300, 256], [300, 257], [300, 258],
@@ -290,6 +309,7 @@
                     [2, 1], [1, 1], 'fluid'
                 ])
                 .build();
+
 
             // ------------------------------------------------------------------
             // 5. 광고 슬롯 변수 초기화
@@ -317,14 +337,11 @@
             // - 데스크탑에서만 정의하며, 페이지 로드 직후 1회 eager refresh 합니다.
             // ------------------------------------------------------------------
             if (deviceCategory === 'desktop') {
-                TC_billboard_X_slot = googletag.defineSlot(AdUnitPath, [
-                    [1246, 100], [1200, 300], [1200, 100],
-                    [980, 120], [970, 250], [970, 90], [930, 180],
-                    [750, 300], [750, 200],
-                    [480, 320], [728, 90],
-                    [320, 100], [320, 50],
-                    [1, 1], 'fluid'
-                ], 'TC_billboard_X')
+                TC_billboard_X_slot = googletag.defineSlot(
+                AdUnitPath, 
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'], 
+                'TC_billboard_X'
+            )
                     .defineSizeMapping(sizeMapping_horizontal)
                     .setTargeting('div_id', 'TC_billboard_X')
                     .setTargeting('position', 'TC')
@@ -341,10 +358,10 @@
             // - 데스크탑 전용이며 Lazy Load 대상입니다.
             // ------------------------------------------------------------------
             if (deviceCategory === 'desktop') {
-                MR_side_rail_X_slot = googletag.defineSlot(AdUnitPath, [
-                    [336, 280], [300, 600], [300, 250], [250, 250], [200, 200],
-                    [2, 1], [1, 1], 'fluid'
-                ], 'MR_side_rail_X')
+                MR_side_rail_X_slot = googletag.defineSlot(AdUnitPath, 
+                [[336, 280],[320, 480], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'], 
+                'MR_side_rail_X'
+            )
                     .defineSizeMapping(sizeMapping_siderail_square)
                     .setTargeting('div_id', 'MR_side_rail_X')
                     .setTargeting('position', 'MR')
@@ -491,15 +508,7 @@
             // ------------------------------------------------------------------
             const BC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [
-                    [1246, 100], [1200, 300], [1200, 100],
-                    [980, 120], [970, 250], [970, 90], [930, 180],
-                    [750, 300], [750, 200], [728, 90],
-                    [480, 320], [336, 280], [320, 480],
-                    [300, 250], [250, 250], [200, 200],
-                    [320, 100], [320, 50],
-                    [1, 1], 'fluid'
-                ],
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [1, 1], 'fluid'],
                 'BC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal)
