--- a/section.html
+++ b/section.html
@@ -223,7 +223,7 @@
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
-                    [336, 280], [300, 250], 
+                    [336, 280], [320, 480], [300, 250], 
                     [2, 1], [1, 1], 
                     'fluid'
                 ])
@@ -241,7 +241,7 @@
             //   · 태블릿/모바일 구간은 기존 정책을 유지하면서 네이밍만 통일
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [300, 600], [300, 250], 
+                    [336, 280], [320, 480], [300, 600], [300, 250], 
                     [250, 250], [200, 200],
                     [2, 1], [1, 1], 
                     'fluid'
@@ -295,7 +295,7 @@
             // 5-2. MR_halfpage_rectangle (Lazy Load) - sizeMapping_siderail_square 적용
             MR_halfpage_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320],[336, 280], [320, 480], [320, 100], [320, 50], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 600], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MR_halfpage_rectangle' // Slot ID는 MR_halfpage_rectangle 유지
             )
                 .defineSizeMapping(sizeMapping_siderail_square) 
