--- a/view.html
+++ b/view.html
@@ -239,7 +239,7 @@
                 .addSize([768, 0], [
                     [750, 300], [750, 200], [728, 90], 
                     [480, 320], 
-                    [336, 280], [300, 250], 
+                    [336, 280], [320, 480], [300, 250], 
                     [2, 1], [1, 1], 
                     'fluid'
                 ])
@@ -257,7 +257,7 @@
             //   · 태블릿/모바일 구간은 기존 정책을 유지하면서 네이밍만 통일
             const sizeMapping_siderail_square = googletag.sizeMapping()
                 .addSize([1024, 0], [
-                    [336, 280], [300, 600], [300, 250], 
+                    [336, 280], [320, 480], [300, 600], [300, 250], 
                     [250, 250], [200, 200],
                     [2, 1], [1, 1], 
                     'fluid'
@@ -293,6 +293,7 @@
                     [2, 1], [1, 1], 'fluid'
                 ])
                 .addSize([768, 0], [
+                    [750, 300], [750, 200], [728, 90], 
                     [480, 320], [336, 280], [320,480], 
                     [320, 100], [320, 50],
                     [300, 250],
@@ -334,9 +335,10 @@
             // 5-1. [Desktop 전용] TC_billboard_X (Eager Load, ATF)
             //
             // - 상단 빌보드 영역.
+            // - 데스크탑 전용이므로 모바일 사이즈는 제외 합니다.
             // - 데스크탑에서만 정의하며, 페이지 로드 직후 1회 eager refresh 합니다.
             // ------------------------------------------------------------------
-            if (deviceCategory === 'desktop') {
+            if (deviceCategory === 'desktop' || deviceCategory === 'tablet') {
                 TC_billboard_X_slot = googletag.defineSlot(
                 AdUnitPath, 
                 [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [728, 90], [2, 1], [1, 1], 'fluid'], 
@@ -356,6 +358,7 @@
             //
             // - 우측 레일 MR 광고.
             // - 데스크탑 전용이며 Lazy Load 대상입니다.
+            // - 데스크탑 전용이므로 모바일 사이즈는 제외 합니다.
             // ------------------------------------------------------------------
             if (deviceCategory === 'desktop') {
                 MR_side_rail_X_slot = googletag.defineSlot(AdUnitPath, 
@@ -385,7 +388,7 @@
             // ------------------------------------------------------------------
             MC_article_rectangle_1_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 251], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 251], [250, 250], [200, 200],  [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_1'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -398,7 +401,7 @@
 
             MC_article_rectangle_2_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 252], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 252], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_2'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -411,7 +414,7 @@
 
             MC_article_rectangle_3_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 253], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 253], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_3'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -424,7 +427,7 @@
 
             MC_article_rectangle_4_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 254], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 254], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_4'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -437,7 +440,7 @@
 
             MC_article_rectangle_5_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 255], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 255], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_5'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -450,7 +453,7 @@
 
             MC_article_rectangle_6_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 256], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 256], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_6'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -463,7 +466,7 @@
 
             MC_article_rectangle_7_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 257], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 257], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_7'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -476,7 +479,7 @@
 
             MC_article_rectangle_8_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [300, 258], [250, 250], [200, 200], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [300, 258], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'MC_article_rectangle_8'
             )
                 .defineSizeMapping(sizeMapping_article_horizontal)
@@ -492,7 +495,7 @@
             // ------------------------------------------------------------------
             const BC_byline_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [1, 1], 'fluid'],
+                [[750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [320, 100], [320, 50], [300, 250], [250, 250], [200, 200], [2, 1], [1, 1], 'fluid'],
                 'BC_byline_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal)
@@ -508,7 +511,7 @@
             // ------------------------------------------------------------------
             const BC_billboard_rectangle_slot = googletag.defineSlot(
                 AdUnitPath,
-                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [1, 1], 'fluid'],
+                [[1246, 100], [1200, 300], [1200, 100], [980, 120], [970, 250], [970, 90], [930, 180], [750, 300], [750, 200], [728, 90], [480, 320], [336, 280], [320, 480], [300, 250], [250, 250], [200, 200], [320, 100], [320, 50], [2, 1], [1, 1], 'fluid'],
                 'BC_billboard_rectangle'
             )
                 .defineSizeMapping(sizeMapping_horizontal)
