.mk-ad-close-button { border-radius: 2px;

--- a/HOME.html
+++ b/HOME.html
@@ -229,7 +229,7 @@
             top: 20px;
             right: 10px;
             padding: 4px 4px;              /* 클릭 영역은 확보하되 과도한 박스 느낌은 줄임 */
-            border-radius: 0;              /* 각진 형태로 심플하게 유지 */
+            border-radius: 2px;              /* 각진 형태로 심플하게 유지 */
             background-color: rgba(0, 0, 0, 0.35);
             display: inline-flex;
             align-items: center;
