--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -1,78 +1,86 @@
 <style>
-  /* 기본 환경 초기화 및 투명 배경 */
-  html, body { background: transparent !important; margin: 0; padding: 0; }
+  /* [환경설정] Iframe 내부 rem 기준 및 초기화 */
+  html { font-size: 10px !important; -webkit-text-size-adjust: none; }
+  body, h4, ul, li { margin: 0; padding: 0; }
+  * { box-sizing: border-box; }
   
-  #reo_0HBy { 
-    width: 100%; 
-    text-align: left; 
-    font-family: 'Pretendard Variable', 'Malgun Gothic', sans-serif; 
+  /* [기본스타일] 배경 투명 및 폰트 설정 */
+  html, body { 
+    background: transparent !important; 
+    font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
+    -webkit-font-smoothing: antialiased; 
   }
-  
-  #reo_0HBy .ad_box { padding: 0; margin: 0; list-style: none; }
-  
-  /* 다크모드 전용 경계선 컬러 (--c-line) */
-  #reo_0HBy .ad_list { 
+
+  #mk_native_ad_wrap { width: 100%; text-align: left; }
+  .ad_box { list-style: none; }
+
+  /* [레이아웃] 다크모드 전용 구분선 (#464646) */
+  .ad_item { 
     border-bottom: 1px solid #464646 !important; 
     height: 80px; 
-    overflow: hidden; 
-    display: flex;
-    align-items: center;
-  }
-  
-  #reo_0HBy .ad_list:last-child { border-bottom: none !important; }
-  
-  /* 다크모드 텍스트 스타일 (--c-txt) */
-  #reo_0HBy .ad_list a { 
     display: flex; 
     align-items: center; 
-    width: 100%;
-    height: 100%;
-    padding: 20px 0 !important; 
-    text-decoration: none; 
-    transition: opacity 0.3s; 
+    overflow: hidden;
   }
-  
-  #reo_0HBy .ad_list a h4 { 
-    margin: 0;
+  .ad_item:last-child { border-bottom: none !important; }
+
+  /* [클릭영역] */
+  .ad_link { 
+    display: flex; 
+    align-items: center; 
+    width: 100%; 
+    height: 100%; 
+    padding: 0 5px; 
+    text-decoration: none; 
+  }
+
+  /* [텍스트] 다크모드 전용 글자색 (#f0f0f0) */
+  .ad_title { 
+    margin: 0; 
     color: #f0f0f0 !important; 
     font-size: 2.4rem !important; 
     font-weight: 600 !important; 
-    line-height: 2.5rem !important;
+    line-height: 1.4 !important; 
     letter-spacing: -0.05em !important;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
+    display: -webkit-box; 
+    -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
-    overflow: hidden;
+    overflow: hidden; 
     text-overflow: ellipsis;
-    position: relative;
+    position: relative; 
     bottom: 4px;
   }
-  
-  /* 다크모드 주황색 블릿 포인트 */
-  #reo_0HBy .ad_list a h4::before { 
+
+  /* [블릿] 다크모드 포인트 오렌지 컬러 (#FF891C) */
+  .ad_title::before { 
     content: '·'; 
     color: #FF891C !important; 
     font-weight: 900 !important; 
     font-size: 3rem !important; 
     margin-right: 10px; 
     line-height: 1;
-    display: inline-block;
-    vertical-align: middle;
   }
   
-  #reo_0HBy .ad_list a:hover { opacity: 0.6; }
+  /* [인터랙션] 호버 시 투명도 변화 */
+  .ad_link:hover .ad_title { opacity: 0.6; transition: 0.3s; }
 </style>
 
-<div id="reo_0HBy">
-  <div class="ad_box">
-    <div class="ad_list">
-      <a href="https://ad.reople.co.kr/..." target="_blank"><h4>요즘 죽이는 "브로콜리" TV방송 후 구매 열풍!</h4></a>
-    </div>
-    <div class="ad_list">
-      <a href="https://ad.reople.co.kr/..." target="_blank"><h4>"선비치리조트" 오픈 기념! 100%반환 신규회원 모집!</h4></a>
-    </div>
-    <div class="ad_list">
-      <a href="https://ad.reople.co.kr/..." target="_blank"><h4>죽을만큼 아픈 허리통증! "수술없이" 해결하는 비법!</h4></a>
-    </div>
-  </div>
+<div id="mk_native_ad_wrap">
+  <ul class="ad_box">
+    <li class="ad_item">
+      <a href="광고링크1" target="_blank" class="ad_link">
+        <h4 class="ad_title">다크모드 첫 번째 광고 줄입니다</h4>
+      </a>
+    </li>
+    <li class="ad_item">
+      <a href="광고링크2" target="_blank" class="ad_link">
+        <h4 class="ad_title">가독성을 위해 반전된 컬러가 적용되었습니다</h4>
+      </a>
+    </li>
+    <li class="ad_item">
+      <a href="광고링크3" target="_blank" class="ad_link">
+        <h4 class="ad_title">3줄 구성으로 주변 뉴스 목록과 완벽히 동기화됩니다</h4>
+      </a>
+    </li>
+  </ul>
 </div>
