배경컬러 변경

--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -6,7 +6,7 @@
   
   /* [기본스타일] 배경 투명 및 폰트 설정 */
   html, body { 
-    background: transparent !important; 
+    background: #1d1d1d !important; 
     font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
     -webkit-font-smoothing: antialiased; 
   }
