--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -14,7 +14,7 @@
     * { box-sizing: border-box; }
     
     html, body { 
-      background: transparent !important; 
+      background: #1d1d1d !important; 
       font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
       -webkit-font-smoothing: antialiased; 
     }
@@ -45,7 +45,7 @@
     .ad_title { 
       margin: 0; 
       color: #f0f0f0 !important; 
-      font-size: 2.4rem !important; 
+      font-size: 1.7rem !important; 
       font-weight: 600 !important; 
       line-height: 1.4 !important; 
       letter-spacing: -0.05em !important;
