--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -1,6 +1,6 @@
 <style>
   html, body { 
-    background: transparent !important; 
+    background: #1d1d1d !important; 
     margin: 0; padding: 0; 
     -webkit-text-size-adjust: none; 
   }
