--- a/3rd-party-creatives/reo_dark.html
+++ b/3rd-party-creatives/reo_dark.html
@@ -1,58 +1,91 @@
-<style>
-  html, body { 
-    background: #1d1d1d !important; 
-    margin: 0; padding: 0; 
-    -webkit-text-size-adjust: none; 
-  }
-  body, h4, ul, li { margin: 0; padding: 0; }
-  * { box-sizing: border-box; }
-  
-  #reo_0HBy { 
-    width: 100%; text-align: left; 
-    font-family: 'Pretendard Variable', 'Malgun Gothic', sans-serif; 
-    -webkit-font-smoothing: antialiased; 
-  }
-  #reo_0HBy .ad_box { padding: 0; margin: 0; list-style: none; }
-  
-  /* 다크모드 전용 경계선 (#464646) */
-  #reo_0HBy .ad_list { 
-    border-bottom: 1px solid #464646 !important; 
-    height: 80px; 
-    display: flex; align-items: center; 
-    overflow: hidden;
-  }
-  #reo_0HBy .ad_list:last-child { border-bottom: none !important; }
-  
-  #reo_0HBy .ad_list a { 
-    display: flex; align-items: center; 
-    width: 100%; height: 100%; 
-    padding: 0 10px !important; 
-    text-decoration: none; 
-  }
-  /* 다크모드 텍스트 컬러 (#f0f0f0), 17px 고정 */
-  #reo_0HBy .ad_list a h4 { 
-    margin: 0; color: #f0f0f0 !important; 
-    font-size: 17px !important; 
-    font-weight: 600 !important; 
-    line-height: 1.4 !important; 
-    letter-spacing: -0.05em !important;
-    display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;
-    overflow: hidden; text-overflow: ellipsis;
-    position: relative; bottom: 1px;
-  }
-  
-  /* 다크모드용 주황색 블릿 */
-  #reo_0HBy .ad_list a h4::before { 
-    content: '·'; color: #FF891C !important; font-weight: 900 !important; 
-    font-size: 22px !important; margin-right: 8px; line-height: 1;
-  }
-  #reo_0HBy .ad_list a:hover { opacity: 0.6; transition: 0.3s; }
-</style>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* 1. Iframe 환경 초기화 */
+        html, body { 
+            background: transparent !important; 
+            margin: 0; padding: 0; 
+            -webkit-text-size-adjust: none; 
+        }
+        body, h4, ul, li { margin: 0; padding: 0; }
+        * { box-sizing: border-box; }
+        
+        /* 2. 전체 컨테이너 및 폰트 설정 */
+        #mk_native_ad_wrap { 
+            width: 100%; 
+            text-align: left; 
+            font-family: 'Pretendard Variable', 'Pretendard', 'Malgun Gothic', sans-serif; 
+            -webkit-font-smoothing: antialiased; 
+        }
+        .ad_box { list-style: none; }
 
-<div id="reo_0HBy">
-  <div class="ad_box">
-    <div class="ad_list"><a href="링크1" target="_blank"><h4>다크모드 첫 번째 광고 텍스트입니다.</h4></a></div>
-    <div class="ad_list"><a href="링크2" target="_blank"><h4>어두운 테마에서도 선명한 가독성을 제공합니다.</h4></a></div>
-    <div class="ad_list"><a href="링크3" target="_blank"><h4>3줄 구성으로 뉴스 목록과 조화를 이룹니다.</h4></a></div>
-  </div>
-</div>
+        /* 3. 개별 행 레이아웃 (다크모드 전용 경계선 컬러) */
+        .ad_item { 
+            border-bottom: 1px solid #464646 !important; 
+            height: 80px; 
+            display: flex; 
+            align-items: center; 
+            overflow: hidden;
+        }
+        .ad_item:last-child { border-bottom: none !important; }
+
+        /* 4. 클릭 영역 및 텍스트 박스 */
+        .ad_link { 
+            display: flex; 
+            align-items: center; 
+            width: 100%; 
+            height: 100%; 
+            padding: 0 10px !important; 
+            text-decoration: none; 
+        }
+
+        /* 5. 텍스트 상세 스타일 (다크모드용 컬러 #f0f0f0) */
+        .ad_title { 
+            margin: 0; 
+            color: #f0f0f0 !important; 
+            font-size: 17px !important; 
+            font-weight: 600 !important; 
+            line-height: 25px !important; 
+            letter-spacing: -0.05em !important;
+            display: -webkit-box; 
+            -webkit-line-clamp: 2; 
+            -webkit-box-orient: vertical;
+            overflow: hidden; 
+            text-overflow: ellipsis;
+            position: relative;
+            top: 1px;
+        }
+
+        /* 6. 다크모드용 주황색 블릿 (컬러 #FF891C) */
+        .ad_title::before { 
+            content: '·'; 
+            color: #FF891C !important; 
+            font-weight: 900 !important; 
+            font-size: 24px !important; 
+            margin-right: 8px; 
+            line-height: 1;
+        }
+
+        /* 7. 인터랙션 */
+        .ad_link:hover .ad_title { opacity: 0.6; transition: 0.2s; }
+    </style>
+</head>
+<body>
+    <div id="mk_native_ad_wrap">
+        <ul class="ad_box">
+            <li class="ad_item">
+                <a href="광고링크1" target="_blank" class="ad_link"><h4 class="ad_title">다크모드 첫 번째 광고 텍스트입니다.</h4></a>
+            </li>
+            <li class="ad_item">
+                <a href="광고링크2" target="_blank" class="ad_link"><h4 class="ad_title">어두운 테마에서도 선명한 가독성을 제공하며 px로 크기를 고정했습니다.</h4></a>
+            </li>
+            <li class="ad_item">
+                <a href="광고링크3" target="_blank" class="ad_link"><h4 class="ad_title">3줄 구성으로 뉴스 목록과 시각적으로 완전히 동기화됩니다.</h4></a>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
